--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
 </head>
 <body>
     
-    <header>
+    <header> <!-- all'interno dell'header andrà titolo h1 e immagini header1-3 comprese all'interno del div-->
+        <h1> Il mio viaggio a Londra &hearts;</h1>
+            <div>
+                <img src="./img/header1.jpg" alt="header1" width="200"> 
+                <img src="./img/header2.jpg" alt="header2" width="200">
+                <img src="./img/header3.jpg" alt="header3" width="200">
+            </div>
+        <hr>
         <main>
+            <div>
+
+            </div>
             <footer>
 
             </footer>
