--- a/index.html
+++ b/index.html
@@ -17,8 +17,36 @@
         <hr>
         <main>
             <div>
-
+                <table>
+                    <caption> <b><h2>Le mie spese</h2></b></caption>
+                    <tr>
+                        <th>numero </th>
+                        <th>descrizione </th>
+                        <th>costo </th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>totale</td>
+                        <td> </td>
+                        <td>360&euro;</td>
+                    </tr>
+                </table>
             </div>
+            <hr>
             <footer>
 
             </footer>
