--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     
     <header> <!-- all'interno dell'header andrà titolo h1 e immagini header1-3 comprese all'interno del div-->
+
         <h1> Il mio viaggio a Londra &hearts;</h1>
             <div>
                 <img src="./img/header1.jpg" alt="header1" width="200"> 
@@ -15,10 +16,13 @@
                 <img src="./img/header3.jpg" alt="header3" width="200">
             </div>
         <hr>
-        <main>
+
+
+        <main> <!-- all'interno del main andranno tabella e elenchi-->
+
             <div>
                 <table>
-                    <caption> <b><h2>Le mie spese</h2></b></caption>
+                    <caption> <h2>Le mie spese</h2></caption>
                     <tr>
                         <th>numero </th>
                         <th>descrizione </th>
@@ -47,8 +51,47 @@
                 </table>
             </div>
             <hr>
-            <footer>
 
+
+            <div>
+                <h3>Cose da fare</h3>
+                <ul>
+                    <li>Visitare la tower of London &#10060; </li>
+                    <li>Visitare Greenwich &#9989; </li>
+                    <li>Ascoltare un artista di strada a Covent Garden &#9989; </li>
+                    <li>Mangiare il tipico fish and chips inglese &#10060; </li>
+                </ul>
+            </div>
+            <hr>
+
+            <div>
+                <h3>Info utili:</h3>
+                <ol>
+                    <li>Numeri utili di emergenza</li>
+                    <ul>
+                        <li><b>999</b> - emergenza</li>
+                        <li><b>101</b> - polizia</li>
+                        <li><b>111</b> - assistenza medica</li>
+                    </ul>
+                    <li>Hotel</li>
+                    <ul>
+                        <li><b>Nome hotel:</b> - Buckingham palace</li>
+                        <li><b>Indirizzo hotel</b> - Westmeinster, London, SW1A 1AA, Regno unito</li>
+                    </ul>
+                    <li>Aereo</li>
+                    <ul>
+                        <li><b>Volo di andata</b> - Y1234X, 9.30, Milano Malpensa</li>
+                        <li><b>Volo di ritorno</b> - Y1236X,18.30 London Heathrow</li>
+                    </ul>
+            </div>
+            <hr>
+
+
+            <footer> <!-- all'interno del footer andranno isnerite le immagini in fondo alla pagina -->
+                <div>
+                    <img src="./img/footer1.jpg" alt="footer1" width="200">
+                    <img src="./img/footer2.jpg" alt="footer2" width="200">
+                </div>
             </footer>
         </main>
     </header>
