--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>html-london-trip</title>
 </head>
 <body>
     
@@ -16,11 +16,11 @@
                 <img src="./img/header3.jpg" alt="header3" width="200">
             </div>
         <hr>
-
+    </header>
 
         <main> <!-- all'interno del main andranno tabella e elenchi-->
 
-            <div>
+            <section> <!-- section della tabella "le mie spese"-->
                 <table>
                     <caption> <h2>Le mie spese</h2></caption>
                     <tr>
@@ -49,11 +49,11 @@
                         <td>360&euro;</td>
                     </tr>
                 </table>
-            </div>
+            </section>
             <hr>
 
 
-            <div>
+            <section> <!-- section "cose da fare"-->
                 <h3>Cose da fare</h3>
                 <ul>
                     <li>Visitare la tower of London &#10060; </li>
@@ -61,10 +61,10 @@
                     <li>Ascoltare un artista di strada a Covent Garden &#9989; </li>
                     <li>Mangiare il tipico fish and chips inglese &#10060; </li>
                 </ul>
-            </div>
+            </section>
             <hr>
 
-            <div>
+            <section> <!-- section "info utili"-->
                 <h3>Info utili:</h3>
                 <ol>
                     <li>Numeri utili di emergenza</li>
@@ -75,25 +75,25 @@
                     </ul>
                     <li>Hotel</li>
                     <ul>
-                        <li><b>Nome hotel:</b> - Buckingham palace</li>
-                        <li><b>Indirizzo hotel</b> - Westmeinster, London, SW1A 1AA, Regno unito</li>
+                        <li><b>Nome hotel:</b> Buckingham palace</li>
+                        <li><b>Indirizzo hotel</b> Westmeinster, London, SW1A 1AA, Regno unito</li>
                     </ul>
                     <li>Aereo</li>
                     <ul>
-                        <li><b>Volo di andata</b> - Y1234X, 9.30, Milano Malpensa</li>
-                        <li><b>Volo di ritorno</b> - Y1236X,18.30 London Heathrow</li>
+                        <li><b>Volo di andata:</b> Y1234X, 9.30, Milano Malpensa</li>
+                        <li><b>Volo di ritorno:</b> Y1236X,18.30 London Heathrow</li>
                     </ul>
-            </div>
+            </section>
             <hr>
-
+        </main>
 
             <footer> <!-- all'interno del footer andranno isnerite le immagini in fondo alla pagina -->
+                <h3>Le foto &DownArrow;</h3>
                 <div>
                     <img src="./img/footer1.jpg" alt="footer1" width="200">
                     <img src="./img/footer2.jpg" alt="footer2" width="200">
                 </div>
             </footer>
-        </main>
-    </header>
+
 </body>
 </html>
