--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
             <section> <!-- section della tabella "le mie spese"-->
                 <table>
-                    <caption> <h2>Le mie spese</h2></caption>
+                    <caption style="text-align: left;"><h2>Le mie spese</h2></caption>
+                    
                     <tr>
                         <th>numero </th>
                         <th>descrizione </th>
@@ -68,28 +69,29 @@
                 <h3>Info utili:</h3>
                 <ol>
                     <li>Numeri utili di emergenza</li>
-                    <ul>
-                        <li><b>999</b> - emergenza</li>
-                        <li><b>101</b> - polizia</li>
-                        <li><b>111</b> - assistenza medica</li>
-                    </ul>
+                        <ul>
+                            <li><b>999</b> - emergenza</li>
+                            <li><b>101</b> - polizia</li>
+                            <li><b>111</b> - assistenza medica</li>
+                        </ul>
                     <li>Hotel</li>
-                    <ul>
-                        <li><b>Nome hotel:</b> Buckingham palace</li>
-                        <li><b>Indirizzo hotel</b> Westmeinster, London, SW1A 1AA, Regno unito</li>
-                    </ul>
+                        <ul>
+                            <li><b>Nome hotel:</b> Buckingham palace</li>
+                            <li><b>Indirizzo hotel</b> Westmeinster, London, SW1A 1AA, Regno unito</li>
+                        </ul>
                     <li>Aereo</li>
-                    <ul>
-                        <li><b>Volo di andata:</b> Y1234X, 9.30, Milano Malpensa</li>
-                        <li><b>Volo di ritorno:</b> Y1236X,18.30 London Heathrow</li>
-                    </ul>
+                        <ul>
+                            <li><b>Volo di andata:</b> Y1234X, 9.30, Milano Malpensa</li>
+                            <li><b>Volo di ritorno:</b> Y1236X,18.30 London Heathrow</li>
+                        </ul>
+                </ol>
             </section>
             <hr>
         </main>
 
-            <footer> <!-- all'interno del footer andranno isnerite le immagini in fondo alla pagina -->
+            <footer> <!-- all'interno del footer andranno inserite le immagini in fondo alla pagina -->
                 <h3>Le foto &DownArrow;</h3>
-                <div>
+                <div> <!--Div con le foto footer1 e 2 -->
                     <img src="./img/footer1.jpg" alt="footer1" width="200">
                     <img src="./img/footer2.jpg" alt="footer2" width="200">
                 </div>
