(def) fix lista "info utili"

--- a/index.html
+++ b/index.html
@@ -68,22 +68,25 @@
             <section> <!-- section "info utili"-->
                 <h3>Info utili:</h3>
                 <ol>
-                    <li>Numeri utili di emergenza</li>
+                    <li>Numeri utili di emergenza
                         <ul>
                             <li><b>999</b> - emergenza</li>
                             <li><b>101</b> - polizia</li>
                             <li><b>111</b> - assistenza medica</li>
                         </ul>
-                    <li>Hotel</li>
+                    </li>
+                    <li>Hotel
                         <ul>
                             <li><b>Nome hotel:</b> Buckingham palace</li>
                             <li><b>Indirizzo hotel</b> Westmeinster, London, SW1A 1AA, Regno unito</li>
                         </ul>
-                    <li>Aereo</li>
+                    </li>
+                    <li>Aereo
                         <ul>
                             <li><b>Volo di andata:</b> Y1234X, 9.30, Milano Malpensa</li>
                             <li><b>Volo di ritorno:</b> Y1236X,18.30 London Heathrow</li>
                         </ul>
+                    </li>
                 </ol>
             </section>
             <hr>
